...
                      _buildTableRow(
                        "Chapter",
                        "PDF",
                        "PPT",
                      ),
                      _buildTableRowWithLinks(
                          context, "Chapter 1: Java Basics", chapter1PdfLink, chapter1PptLink),
                      _buildTableRowWithLinks(
                          context, "Chapter 2: OOP", chapter2PdfLink, chapter2PptLink),
                      _buildTableRowWithLinks(
                          context, "Chapter 3: Exception Handling", chapter3PdfLink, chapter3PptLink),
                      _buildTableRowWithLinks(
                          context, "Chapter 4: Collections Framework", chapter4PdfLink, chapter4PptLink),
...
