...


            SizedBox(height: 20),


            buildDashboardCard(
              title: "Upload Study Material",
              icon: Icons.upload_file,
              color: Colors.green,
              onTap: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => UploadMaterialScreen(assignedBranch: assignedBranch, assignedSubjects: assignedSubjects)),
...
